# muon3

./: .gitignore  .gitmodules  Muon3_Simulation_Studies.bib  Muon3_Simulation_Studies.tex  README.md  build_paper.sh  package.json  tscircuit.config.json  tsconfig.json
Muon3Vision/: Package.swift  README.md  build_visionpro.sh
Muon3Vision/Resources/: hits.csv
board/: LAYOUT.md  README.md  afe.tsx  digital.tsx  floorplan.tsx  hv.tsx  index.tsx  layout.ts  power.tsx  rails.tsx  rf.tsx  tec.tsx
board/imports/: ADS7128IRTER.tsx  AO3400A.tsx  BME280.tsx  BWU_FL_IPEX1.tsx  CH224K.tsx  DAC80508MRTER.tsx  DAC80508ZYZFR.tsx  DRV8873HPWPR.tsx  ICE40UP5K_SG48I.tsx  RP2040.tsx  TPS62933DRLR.tsx  TYPE_C_31_M_12.tsx  W25Q128JVSIQ.tsx  nRF9151_LACA_R7.tsx
cad/blender/: README.md  render_muon_panel.py
cad/sphenix_hcal/: README.md
fab/: bom.csv  muon3-board.kicad_pcb  pnp.csv
firmware/: CMakeLists.txt  README.md  prj.conf  setup_env.sh  west.yml
firmware/boards/: nrf9151dk_nrf9151.overlay
firmware/src/: main.c
gateware/: Makefile  README.md  pinmap.pcf  top.v
imports/: LT3482EUD_TRPBF.tsx  OPA858IDSGR.tsx  TLV3601DCKR.tsx
pcb/: .gitignore  DESIGN_RULES.md  PART_SELECTION.md  README.md  SCHEMATIC_FREEZE_CHECK.md  afe.kicad_sch  bom.csv  connectors_sensors.kicad_sch  digital_radio.kicad_sch  fp-lib-table  freeze_questions.md  muon3.kicad_pcb  muon3.kicad_prl  muon3.kicad_pro  muon3.kicad_sch  power_usb_pd.kicad_sch  sym-lib-table  thermal.kicad_sch
pcb/3dmodels/: README.md
pcb/components/: README.md  muon3.kicad_sym
pcb/parts/: README.md  selection_matrix.csv
pcb/tscircuit/: KICAD_BRIDGE.md  MUON3_PLACEMENT_SHIELDING.md  README.md  autoroute_demo.tsx  coords.ts  export_to_kicad.ts  hcal_tile_placement.tsx  import_kicad_snapshot.ts  muon3_placement.tsx  (+4 more)
reference_documentation/: README.md
reference_documentation/next_generation/nextgen_review/rp2350_reference/firmware/: CMakeLists.txt  pico_sdk_import.cmake
reference_documentation/next_generation/nextgen_review/rp2350_reference/firmware/pio/: edge_fall.pio
reference_documentation/next_generation/nextgen_review/rp2350_reference/firmware/src/: bme280.c  bme280.h  dac7578.c  dac7578.h  main.c  proto.c  proto.h
scripts/: README.md  pull_google_drive.py  pull_google_photos.py  requirements-docs.txt
sim/: README.md
sim/geant4/: CMakeLists.txt  README.md  build_with_system_geant4.sh  hcal_tile.cc  hcal_tile_hits.csv  muon_panel.cc
sim/geant4/build_clean/: CMakeCache.txt
sim/geant4/gdml/: InnerHCalTile01_EJ200_assembly.gdml  InnerHCalTile02_EJ200_assembly.gdml  InnerHCalTile03_EJ200_assembly.gdml  InnerHCalTile04_EJ200_assembly.gdml  InnerHCalTile05_EJ200_assembly.gdml  InnerHCalTile06_EJ200_assembly.gdml  InnerHCalTile07_EJ200_assembly.gdml  InnerHCalTile08_EJ200_assembly.gdml  InnerHCalTile09_EJ200_assembly.gdml  InnerHCalTile10_EJ200_assembly.gdml  InnerHCalTile11_EJ200_assembly.gdml  InnerHCalTile12_EJ200_assembly.gdml
sim/geant4/gdml/mesh/: InnerHCalTile01_EJ200_mesh.json  InnerHCalTile02_EJ200_mesh.json  InnerHCalTile03_EJ200_mesh.json  InnerHCalTile04_EJ200_mesh.json  InnerHCalTile05_EJ200_mesh.json  InnerHCalTile06_EJ200_mesh.json  InnerHCalTile07_EJ200_mesh.json  InnerHCalTile08_EJ200_mesh.json  InnerHCalTile09_EJ200_mesh.json  InnerHCalTile10_EJ200_mesh.json  InnerHCalTile11_EJ200_mesh.json  InnerHCalTile12_EJ200_mesh.json
sim/geant4/include/: HcalTileActionInitialization.hh  HcalTileDetectorConstruction.hh  HcalTilePrimaryGeneratorAction.hh  PanelActionInitialization.hh  PanelDetectorConstruction.hh  PanelEventAction.hh  PanelPhysicsList.hh  PanelPrimaryGeneratorAction.hh  PanelRunAction.hh  PanelSensitiveDetector.hh  PanelSteppingAction.hh
sim/geant4/macros/: hcal_tile_run.mac  hcal_tile_vis.mac  run.mac  scan_position.mac  vis.mac
sim/geant4/plots/: hcal_inner_tile_summary.json
sim/geant4/scripts/: plot_hcal_tile_results.py
sim/geant4/src/: HcalTileActionInitialization.cc  HcalTileDetectorConstruction.cc  HcalTilePrimaryGeneratorAction.cc  PanelActionInitialization.cc  PanelDetectorConstruction.cc  PanelEventAction.cc  PanelPhysicsList.cc  PanelPrimaryGeneratorAction.cc  PanelRunAction.cc  PanelSensitiveDetector.cc  PanelSteppingAction.cc
tools/: fab.ts  make_bom_pnp.ts  ratsnest.py
(+293 files in other folders)
